- updated deps - migrated to spring boot 3.2.0